# CombatPathingRevolution

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
BehaviorDataInjector/: MaxsuCPR_BDI.json
Nemesis_Engine/mod/mscpr/: info.ini
Nemesis_Engine/mod/mscpr/0_master/: #0106.txt  #0107.txt  #0108.txt
doc/en/: Developers Guidelines of CPR.md
src/: AdvanceRadius_Hook.cpp  AdvanceRadius_Hook.h  Advance_Hook.cpp  Advance_Hook.h  Backoff_Hook.cpp  Backoff_Hook.h  Circling_Hook.cpp  Circling_Hook.h  CombatRadius_Hook.cpp  CombatRadius_Hook.h  ConsoleCommands.cpp  ConsoleCommands.h  Fallback_Hook.cpp  Fallback_Hook.h  Functions.cpp  Functions.h  Hook.cpp  Hook.h  LoadGame.cpp  LoadGame.h  PCH.h  Settings.cpp  Settings.h  Util.cpp  Util.h  main.cpp
src/PayloadInterpreter/: Dtry_Utils.cpp  Dtry_Utils.h  hooks.h  payloadManager.cpp  payloadManager.h
src/PayloadInterpreter/payloadHandlers/: CPRHandler.cpp  payloadHandler.h
src/RE/: CombatBehaviorController.h  CombatBehaviorNodesMovement.cpp  CombatBehaviorNodesMovement.h  CombatBehaviorTreeControl.h  CombatBehaviorTreeNode.h
